--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Dev stage
-      run: ../scripts/ci-dev.sh ../..
+      run: ./.github/scripts/ci-dev.sh
