--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -17,5 +17,6 @@ jobs:
         pwd
         echo $PWD
         echo ${{ secrets.TEST }}
+        echo "====="
         chmod 740 ./.ci/scripts/ci-dev.sh
         ./.ci/scripts/ci-dev.sh $PWD
