--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -16,7 +16,7 @@ jobs:
         ls -l -a
         pwd
         echo $PWD
-        echo ${{ secrets.TEST }}
+        echo "$TEST"
         echo "====="
         chmod 740 ./.ci/scripts/ci-dev.sh
         ./.ci/scripts/ci-dev.sh $PWD
