--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -11,7 +11,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      
     - name: Dev stage
+      env:
+        TEST: ${{ secrets.TEST }}
       run: | 
         ls -l -a
         pwd
