--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: 7perl/build-packs:android-29-ndk-21
     steps:
     - name: Checkout
       uses: actions/checkout@v2
