--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -16,6 +16,8 @@ jobs:
     - name: Dev stage
       env:
         TEST: ${{ secrets.TEST }}
+        B2_APP_ID: ${{ secrets.B2_APP_ID }}
+        B2_APP_KEY: ${{ secrets.B2_APP_KEY }}
       run: | 
         ls -l -a
         pwd
