--- a/java/app/src/main/AndroidManifest.xml
+++ b/java/app/src/main/AndroidManifest.xml
@@ -11,9 +11,12 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
 
-        <activity android:name=".MainAct">
+        >
+
+        <activity android:name=".MainAct"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
